tests/paczka1/fuzzy1/84279450.err
Error in line 10: 0XAV4F S642 0,42
Error in line 11: MNA7 S746 26,8
Error in line 17: UPe0c S371 51,4
Error in line 22: cxTwVewCx S642 40,6
Error in line 14: 0XAV4F S642 0,9
